--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "url": "https://github.com/htetmyathlaing/htetmyathlaing.github.io/issues"
   },
   "homepage": "https://github.com/htetmyathlaing/htetmyathlaing.github.io#readme",
-  "dependencies": {},
+  "dependencies": {
+    "sass": "^1.83.0"
+  },
   "devDependencies": {
     "watch": "^1.0.2"
   }
